# biobuntu

./: .gitignore  CHANGELOG.md  README.md  biobuntu_0.1.0_all.deb  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yaml
biobuntu_0.1.0_all/DEBIAN/: control  postinst
biobuntu_0.1.0_all/usr/lib/biobuntu/web/: README.md
biobuntu_0.1.0_all/usr/lib/biobuntu/workflows/: metagenomics.yaml  rnaseq.yaml  variant.yaml
biobuntu_0.1.0_all/usr/share/applications/: biobuntu.desktop
biobuntu_0.1.0_all/usr/share/biobuntu/: pyproject.toml
conda-recipe/: meta.yaml
deb-build/usr/share/applications/: biobuntu.desktop
docs/: api.md  development.md  getting_started.md  gui.md  pipelines.md  web.md
scripts/: build_all.sh  build_conda.sh  build_deb.sh  build_ppa.sh  install.sh  setup_env.sh  update.sh  upload_pypi.sh
workflows/: qc.yaml
