[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biobuntu"
version = "1.0.0"
description = "A comprehensive platform for running genomic analysis pipelines with CLI, GUI, and web interfaces. Perfect for researchers, labs, and bioinformatics teams."
readme = "README.md"
authors = [
    {name = "BioBuntu", email = "info@biobuntu.com"},
]
dependencies = [
    "click",
    "pyyaml",
    "flask",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
biobuntu = "cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core", "cli", "gui", "web", "tools", "configs"]